# ragnexus

./: .gitignore  PLAN.md  README.md  pyproject.toml
ragnexus/: __init__.py  cli.py  config.py  contracts.py  mcp_server.py  registry.py
ragnexus/adapters/: __init__.py  base.py  pdf.py
ragnexus/core/: __init__.py  chunking.py  embedding.py  retrieve.py  store.py
tests/: test_embedding.py  test_foundation.py  test_pdf.py  test_store.py
